--- a/CorreosSeguimiento.vbproj
+++ b/CorreosSeguimiento.vbproj
@@ -103,6 +103,7 @@
       <DependentUpon>Factor100.xsd</DependentUpon>
     </Compile>
     <Compile Include="Mod_Avio.vb" />
+    <Compile Include="Mod_CRED.vb" />
     <Compile Include="Mod_Factoraje.vb" />
     <Compile Include="Mod_Global.vb" />
     <Compile Include="Mod_MCBitacora.vb" />
