Cambio a Server-raid2

--- a/App.config
+++ b/App.config
@@ -4,7 +4,7 @@
     </configSections>
     <connectionStrings>
         <add name="CorreosSeguimiento.My.MySettings.ProductionConnectionString"
-            connectionString="Data Source=server-raid;Initial Catalog=Production;Persist Security Info=True;User ID=User_PRO;Password=User_PRO2015;Connect Timeout=120"
+            connectionString="Data Source=server-raid2;Initial Catalog=Production;Persist Security Info=True;User ID=User_PRO;Password=User_PRO2015;Connect Timeout=150"
             providerName="System.Data.SqlClient" />
     </connectionStrings>
     <startup> 
