--- a/App.config
+++ b/App.config
@@ -1,6 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
     <configSections>
+        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="CorreosSeguimiento.My.MySettings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+        </sectionGroup>
     </configSections>
     <connectionStrings>
         <add name="CorreosSeguimiento.My.MySettings.ProductionConnectionString"
@@ -10,4 +13,11 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
     </startup>
+    <userSettings>
+        <CorreosSeguimiento.My.MySettings>
+            <setting name="RutaTmp" serializeAs="String">
+                <value>\\server-raid2\TmpFinagil\</value>
+            </setting>
+        </CorreosSeguimiento.My.MySettings>
+    </userSettings>
 </configuration>
