--- a/App.config
+++ b/App.config
@@ -1,18 +1,16 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
     <configSections>
-        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
-            <section name="CorreosSeguimiento.My.MySettings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+            <section name="CorreosSeguimiento.My.MySettings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false"/>
         </sectionGroup>
     </configSections>
     <connectionStrings>
-        <add name="CorreosSeguimiento.My.MySettings.ProductionConnectionString"
-            connectionString="Data Source=server-raid2;Initial Catalog=Production;Persist Security Info=True;User ID=User_PRO;Password=User_PRO2015;Connect Timeout=150"
-            providerName="System.Data.SqlClient" />
+        <add name="CorreosSeguimiento.My.MySettings.ProductionConnectionString" connectionString="Data Source=server-raid2;Initial Catalog=Production;Persist Security Info=True;User ID=User_PRO;Password=User_PRO2015;Connect Timeout=150" providerName="System.Data.SqlClient"/>
     </connectionStrings>
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
-    </startup>
+    <startup useLegacyV2RuntimeActivationPolicy="true"> 
+     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/>
+    </startup>  
     <userSettings>
         <CorreosSeguimiento.My.MySettings>
             <setting name="RutaTmp" serializeAs="String">
