--- a/CorreosSeguimiento.vbproj
+++ b/CorreosSeguimiento.vbproj
@@ -11,7 +11,7 @@
     <AssemblyName>CorreosSeguimiento</AssemblyName>
     <FileAlignment>512</FileAlignment>
     <MyType>Console</MyType>
-    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <IsWebBootstrapper>false</IsWebBootstrapper>
     <PublishUrl>\\server-raid\Jobs\</PublishUrl>
     <Install>false</Install>
@@ -30,6 +30,7 @@
     <UseApplicationTrust>false</UseApplicationTrust>
     <PublishWizardCompleted>true</PublishWizardCompleted>
     <BootstrapperEnabled>true</BootstrapperEnabled>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -76,6 +77,8 @@
     <SignManifests>true</SignManifests>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="CrystalDecisions.CrystalReports.Engine, Version=13.0.2000.0, Culture=neutral, PublicKeyToken=692fbea5521e1304, processorArchitecture=MSIL" />
+    <Reference Include="CrystalDecisions.Shared, Version=13.0.2000.0, Culture=neutral, PublicKeyToken=692fbea5521e1304, processorArchitecture=MSIL" />
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Deployment" />
@@ -193,6 +196,7 @@
     <None Include="ProduccionDS.xss">
       <DependentUpon>ProduccionDS.xsd</DependentUpon>
     </None>
+    <EmbeddedResource Include="rptAltaLiquidezAutorizacion.rpt" />
     <None Include="SeguiridadDS.xsc">
       <DependentUpon>SeguiridadDS.xsd</DependentUpon>
     </None>
