--- a/App.config
+++ b/App.config
@@ -6,7 +6,9 @@
         </sectionGroup>
     </configSections>
     <connectionStrings>
-        <add name="CorreosSeguimiento.My.MySettings.ProductionConnectionString" connectionString="Data Source=server-raid2;Initial Catalog=Production;Persist Security Info=True;User ID=User_PRO;Password=User_PRO2015;Connect Timeout=150" providerName="System.Data.SqlClient"/>
+        <add name="CorreosSeguimiento.My.MySettings.ProductionConnectionString"
+            connectionString="Data Source=server-raid2;Initial Catalog=Production;Persist Security Info=True;User ID=User_PRO;Password=User_PRO2015;Connect Timeout=150"
+            providerName="System.Data.SqlClient" />
     </connectionStrings>
     <startup useLegacyV2RuntimeActivationPolicy="true"> 
      <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/>
@@ -15,6 +17,12 @@
         <CorreosSeguimiento.My.MySettings>
             <setting name="RutaTmp" serializeAs="String">
                 <value>\\server-raid2\TmpFinagil\</value>
+            </setting>
+            <setting name="SMTP" serializeAs="String">
+                <value>192.168.110.1</value>
+            </setting>
+            <setting name="SMTP_port" serializeAs="String">
+                <value>26</value>
             </setting>
         </CorreosSeguimiento.My.MySettings>
     </userSettings>
