--- a/My Project/Settings.settings
+++ b/My Project/Settings.settings
@@ -13,5 +13,11 @@
     <Setting Name="RutaTmp" Type="System.String" Scope="User">
       <Value Profile="(Default)">\\server-raid2\TmpFinagil\</Value>
     </Setting>
+    <Setting Name="SMTP" Type="System.String" Scope="User">
+      <Value Profile="(Default)">192.168.110.1</Value>
+    </Setting>
+    <Setting Name="SMTP_port" Type="System.String" Scope="User">
+      <Value Profile="(Default)">26</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
