configuracion de SMTP al config

--- a/App.config
+++ b/App.config
@@ -24,6 +24,9 @@
             <setting name="SMTP_port" serializeAs="String">
                 <value>26</value>
             </setting>
+            <setting name="SMTP_creden" serializeAs="String">
+                <value>ecaceres,c4c3r1t0s,cmoderna</value>
+            </setting>
         </CorreosSeguimiento.My.MySettings>
     </userSettings>
 </configuration>
