--- a/My Project/Settings.settings
+++ b/My Project/Settings.settings
@@ -19,5 +19,8 @@
     <Setting Name="SMTP_port" Type="System.String" Scope="User">
       <Value Profile="(Default)">26</Value>
     </Setting>
+    <Setting Name="SMTP_creden" Type="System.String" Scope="User">
+      <Value Profile="(Default)">ecaceres,c4c3r1t0s,cmoderna</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
