cAMBIO DE ETIQUETA EN FORMATO DE HOJA DE AUTORIZACION LIQUIEDEZ INMEDIATA

--- a/App.config
+++ b/App.config
@@ -25,7 +25,7 @@
                 <value>26</value>
             </setting>
             <setting name="SMTP_creden" serializeAs="String">
-                <value>ecaceres,c4c3r1t0s,cmoderna</value>
+                <value>ecacerest,c4c3r1t0s,cmoderna</value>
             </setting>
         </CorreosSeguimiento.My.MySettings>
     </userSettings>
