--- a/CorreosSeguimiento.vbproj
+++ b/CorreosSeguimiento.vbproj
@@ -38,7 +38,7 @@
     <DebugType>full</DebugType>
     <DefineDebug>true</DefineDebug>
     <DefineTrace>true</DefineTrace>
-    <OutputPath>..\..\..\..\..\Jobs\ConCrystal13035\</OutputPath>
+    <OutputPath>bin\Debug\</OutputPath>
     <DocumentationFile>CorreosSeguimiento.xml</DocumentationFile>
     <NoWarn>42016,41999,42017,42018,42019,42032,42036,42020,42021,42022</NoWarn>
   </PropertyGroup>
@@ -65,10 +65,10 @@
     <OptionInfer>On</OptionInfer>
   </PropertyGroup>
   <PropertyGroup>
-    <ManifestCertificateThumbprint>8F4BC9AFA9890846E24CD27652C53AFDF23E0508</ManifestCertificateThumbprint>
+    <ManifestCertificateThumbprint>64990FF588056F89BB8B3456A59A71A61859E990</ManifestCertificateThumbprint>
   </PropertyGroup>
   <PropertyGroup>
-    <ManifestKeyFile>CorreosSeguimiento_TemporaryKey.pfx</ManifestKeyFile>
+    <ManifestKeyFile>CorreosSeguimiento_1_TemporaryKey.pfx</ManifestKeyFile>
   </PropertyGroup>
   <PropertyGroup>
     <GenerateManifests>true</GenerateManifests>
@@ -189,7 +189,7 @@
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
-    <None Include="CorreosSeguimiento_TemporaryKey.pfx" />
+    <None Include="CorreosSeguimiento_1_TemporaryKey.pfx" />
     <None Include="Factor100.xsc">
       <DependentUpon>Factor100.xsd</DependentUpon>
     </None>
