Cambio para envio de correos de seguiemiento

--- a/App.config
+++ b/App.config
@@ -16,7 +16,7 @@
     <userSettings>
         <CorreosSeguimiento.My.MySettings>
             <setting name="RutaTmp" serializeAs="String">
-                <value>\\server-raid2\TmpFinagil\</value>
+                <value>\\server-nas\TmpFinagil\</value>
             </setting>
             <setting name="SMTP" serializeAs="String">
                 <value>smtp85.cmoderna.com</value>
