--- a/My Project/Settings.settings
+++ b/My Project/Settings.settings
@@ -11,7 +11,7 @@
       <Value Profile="(Default)">Data Source=server-raid2;Initial Catalog=Production;Persist Security Info=True;User ID=User_PRO;Password=User_PRO2015;Connect Timeout=150</Value>
     </Setting>
     <Setting Name="RutaTmp" Type="System.String" Scope="User">
-      <Value Profile="(Default)">\\server-raid2\TmpFinagil\</Value>
+      <Value Profile="(Default)">\\server-nas\TmpFinagil\</Value>
     </Setting>
     <Setting Name="SMTP" Type="System.String" Scope="User">
       <Value Profile="(Default)">smtp85.cmoderna.com</Value>
