--- a/App.config
+++ b/App.config
@@ -25,7 +25,7 @@
                 <value>465,465</value>
             </setting>
             <setting name="SMTP_creden" serializeAs="String">
-                <value>ecacerest,c4c3r1t0s,cmoderna</value>
+                <value>ecacerest,h3Pd1BsQ,cmoderna</value>
             </setting>
         </CorreosSeguimiento.My.MySettings>
     </userSettings>
